--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -42,6 +42,7 @@
     "before_colon_n": "**--before_colon_n",
     "bold": "fettdruck",
     "Choose extract": "Auszug wählen",
+    "compact": "kompakt",
     "Configuration": "Konfiguration",
     "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
@@ -65,6 +66,7 @@
     "d6": "**--d6",
     "d64": "**--d64",
     "d8": "**--d8",
+    "decimals": "Dezimalstellen",
     "default": "Vorgabewert",
     "defaults": "Vorgabewerte",
     "Demo": "Demonstration",
@@ -78,6 +80,7 @@
     "Draggable": "Verschiebemarke",
     "DRAWING_AREA_SIZE": "Größe der Zeichenfläche",
     "DURATION_TO_STYLE": "Dauer-zu-Zeit",
+    "east": "ostwärts",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
     "Edit Addon": "Zusatz bearbeiten ",
     "edit barnumbers or countnotes": "Taktnummern und Zählmarken bearbeiten",
@@ -185,6 +188,10 @@
     "Open Zupfnoter website": "Öffne die Zupfnoter - Homepage",
     "Open": "Öffnen",
     "out distance": "Abstand der Ausgangslinie",
+    "pack_max_spreadfactor": "max. Spreizung",
+    "pack_method": "Packmethode",
+    "pack_min_increment": "min. Inkrement",
+    "packer": "Packer",
     "page annotation": "Seitenbeschriftung",
     "partname": "Partname",
     "Perspective": "Ansicht",
@@ -198,6 +205,7 @@
     "Please provide also Y": "Bitte gib auch einen Y-Wert zum X-Wert an",
     "pos": "Position",
     "prefix": "Präfix",
+    "presets": "Vorlagen",
     "Print A3 Harpnotes": "Harfennoten A3 drucken",
     "Print A4 Harpnotes": "Harfennoten A4 drucken",
     "Print Tune": "Noten drucken",
@@ -235,6 +243,7 @@
     "smaller": "kleiner",
     "SnippetEditor::Annotation": "Zusatz bearbeiten::Notenbeschriftung",
     "sorted": "sortiert",
+    "south": "südwärts",
     "specify all details for bar numbers": "Detaillierte Angaben zu Taktnummern",
     "specify all details for repeat signs": "Detaillierte Angaben\nzu Wiederholungszeichen",
     "specify details for legend": "Einzelheiten für Legende\nfestlegen",
@@ -288,6 +297,7 @@
     "vpos": "vertikale Position",
     "vr": "'V' rechts",
     "vt": "'V' oben",
+    "west": "westwärts",
     "wrap": "wrap",
     "X-position": "X-Position",
     "X:": "X:",
@@ -298,7 +308,6 @@
     "Y_SCALE": "Vertikale Skalierung",
     "Yes": "Ja",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
-
     "end-of-translagion": "end-of-translation"
   }
 }
