see #97 add quick settings (+1 squashed commit) Squashed commits: [245e321] no message
see #97 add quick settings

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -1,6 +1,5 @@
 {
   "phrases": {
-
     "": "",
     "0": "0",
     "1": "1",
@@ -80,7 +79,6 @@
     "Draggable": "Verschiebemarke",
     "DRAWING_AREA_SIZE": "Größe der Zeichenfläche",
     "DURATION_TO_STYLE": "Dauer-zu-Zeit",
-    "east": "ostwärts",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
     "Edit Addon": "Zusatz bearbeiten ",
     "edit barnumbers or countnotes": "Taktnummern und Zählmarken bearbeiten",
@@ -146,6 +144,9 @@
     "large view\nto see all details": "große Darstellung\nzur Beurteilung\nvon Details",
     "large": "groß",
     "layout": "Layout",
+    "layout_compact": "Kompaktes Layout",
+    "layout_large": "Großes Layout",
+    "layout_regular": "Normales Layout",
     "layoutlines": "Stimmen für Layout",
     "Leave Zupfnoter?\nreally ...?": "Zupfnoter verlassen? echt jetzt ...?",
     "left": "links",
@@ -212,7 +213,11 @@
     "Print": "Drucken",
     "Printer adapt" : "Druckeranpassungen",
     "printer": "Drucker",
+    "printer_centric": "Druck zentieren",
+    "printer_left": "Druck nach links schieben",
+    "printer_right": "Druck nach rechts schieben",
     "produce": "Auszüge",
+    "Quick Setting": "Schnelleinstellungen",
     "Reference": "Referenz",
     "regular": "normal",
     "Render previews": "Vorschauen neu errechnen",
@@ -297,7 +302,6 @@
     "vpos": "vertikale Position",
     "vr": "'V' rechts",
     "vt": "'V' oben",
-    "west": "westwärts",
     "wrap": "wrap",
     "X-position": "X-Position",
     "X:": "X:",
