--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -188,7 +188,6 @@
     "Draggable": "Verschiebemarke",
     "DRAWING_AREA_SIZE": "Größe der Zeichenfläche",
     "DURATION_TO_STYLE": "Dauer-zu-Zeit",
-    "east": "ostwärts",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
     "Edit Addon": "Zusatz bearbeiten ",
     "edit barnumbers or countnotes": "Taktnummern und Zählmarken bearbeiten",
@@ -254,6 +253,9 @@
     "large view\nto see all details": "große Darstellung\nzur Beurteilung\nvon Details",
     "large": "groß",
     "layout": "Layout",
+    "layout_compact": "Kompaktes Layout",
+    "layout_large": "Großes Layout",
+    "layout_regular": "Normales Layout",
     "layoutlines": "Stimmen für Layout",
     "Leave Zupfnoter?\nreally ...?": "Zupfnoter verlassen? echt jetzt ...?",
     "left": "links",
@@ -319,7 +321,11 @@
     "Print": "Drucken",
     "Printer adapt": "Druckeranpassungen",
     "printer": "Drucker",
+    "printer_centric": "Druck zentieren",
+    "printer_left": "Druck nach links schieben",
+    "printer_right": "Druck nach rechts schieben",
     "produce": "Auszüge",
+    "Quick Setting": "Schnelleinstellungen",
     "Reference": "Referenz",
     "regular": "normal",
     "Render previews": "Vorschauen neu errechnen",
@@ -403,7 +409,6 @@
     "vpos": "vertikale Position",
     "vr": "'V' rechts",
     "vt": "'V' oben",
-    "west": "westwärts",
     "wrap": "wrap",
     "X-position": "X-Position",
     "X:": "X:",
