#98 provide information of the day

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -205,6 +205,7 @@
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
     "Effective value": "aktuell wirksamer Wert",
     "ELLIPSE_SIZE": "Notengröße",
+    "end-of-translagion": "end-of-translation",
     "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
     "Enter Harp": "Harfeneingabe",
     "Enter Notes": "Noteneingabe",
@@ -293,6 +294,7 @@
     "Open ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "Open an ABC tutorial (in German)": "Öffne ABC - Einfürung\nin Deutsch",
     "Open the user manual": "Öffne das Zupfnoter Benutzerhandbuch",
+    "Open the version information on website": "Vesionsinformaitonen anzeigen",
     "Open the video tutorials on youtube": "Schulungsvideos auf\nYouTube",
     "Open Zupfnoter website": "Öffne die Zupfnoter - Homepage",
     "Open": "Öffnen",
@@ -326,6 +328,8 @@
     "printer_right": "Druck nach rechts schieben",
     "produce": "Auszüge",
     "Quick Setting": "Schnelleinstellungen",
+    "read later": "später lesen",
+    "read now": "jetzt lesen",
     "Reference": "Referenz",
     "regular": "normal",
     "Render previews": "Vorschauen neu errechnen",
@@ -394,6 +398,7 @@
     "the name for the dreaggables of this note": "Name der Verschiebemarke dieser Note",
     "the name for this target": "Name des Sprunziels",
     "There is an error in the data you have entered": "Fehler in den eingegebenen Daten",
+    "There is new unread information": "Es gibt neue Informationen",
     "There is no file with this id": "Es gibt keine Datei mit der Nummer",
     "title": "Titel",
     "Title": "Titel",
@@ -402,6 +407,7 @@
     "Value": "Wert",
     "variantend": "Variantes Ende",
     "verses": "Strophen",
+    "Version info": "Versionsinformationen",
     "vertical position (top->down)": "vertikale position (von oben nach unten)",
     "Videos": "Videos",
     "vl": "'V' links",
@@ -417,7 +423,6 @@
     "xx": "xx",
     "Y-position": "Y-position",
     "Y_SCALE": "Vertikale Skalierung",
-    "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
-    "end-of-translagion": "end-of-translation"
+    "zoom harpnote preview": "Zoom in Vorschau der Harfennoten"
   }
 }
