see #47 Localize Zupfnoter now the abc2svg messages are translated as well

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -428,15 +428,15 @@
     "+: without previous info field": "+: ohne vorhergehends Info-Feld",
     "'{' in grace note": "'{' in Verzierungsnote",
     "'}', ')' or ']' missing in %%staves": "'}', ')' oder ']' fehlt in  %%staves",
-    "',' lacking in annotation '@x,y'": "Il manque une ',' dans l'annotation '@x,y'",
+    "',' lacking in annotation '@x,y'": "',' fehlt in Annotation '@x,y'",
     "$1: inside tune - ignored": "$1: innerhalb der Stimme ignoriert",
-    "'$1:' line ignored": "'$1:' Zeile ignoreirt",
+    "'$1:' line ignored": "'$1:' Zeile ignoriert",
     "!$1! must be on a note": "!$1! muss an einer Note stehen",
     "!$1! must be on a note or a rest": "!$1! muss an einer Note oder Pause stehen",
     "!$1! must be on the last of a couple of notes": "!$1! muss an der letzten Notengruppe stehen",
     "!beamon! must be on a bar": "!beamon! muss an einem Taktstrich stehen",
     "!xstem! must be on a note": "!xstem! muss an einer Note stehen",
-    "%%deco: abnormal h/wl/wr value '$1'": "%%deco: falscher Wert '$1'  für h/wl/wr",
+    "%%deco: abnormal h/wl/wr value '$1'": "%%deco: falscher Wert '$1' für h/wl/wr",
     "%%deco: bad C function index '$1'": "%%deco: falscher C Funktionsindex '$1'",
     "%%deco: bad C function value '$1'": "%%deco: falscher C Funtionswert '$1'",
     "%%deco: cannot have a negative value '$1'": "%%deco: '$1' kann keinen egativen Wert haben",
@@ -449,7 +449,7 @@
     "%%voice ignored": "%%voice ignoriert",
     "%%vskip cannot be negative": "%%vskip kann nicht negativ sein",
     "Bad !xstem!": "!xstem! fehlerhaft",
-    "Bad %%setbarnb value": "fehlerhaft Wert für %%setbarnb",
+    "Bad %%setbarnb value": "fehlerhafter Wert für %%setbarnb",
     "Bad %%staff number $1 (cur $2, max $3)": "falsche %%staff Nummer $1 (cur $2, max $3)",
     "Bad %%staff value '$1'": "fehlerhafte %%staff Nummer '$1'",
     "Bad %%stafflines value": "fehlerhafter Wert für %%stafflines",
@@ -478,7 +478,7 @@
     "Bar in repeat sequence": "Taktstrich in Wiederholungssequenz",
     "Cannot have !$1! on a head": "!$1! kann nicht im Kopfbereich stehen",
     "Cannot have %%fullsvg inside a tune": "'%%fullsvg' kann nicht innerhalb einer Stimme stehen",
-    "Cannot have a bar in grace notes": "Taktstrich in Vorschlagnote nicht erlaubIl ne peut pas y avoir de barre dans les notes d'agrément",
+    "Cannot have a bar in grace notes": "Taktstrich in Vorschlagnoten nicht erlaubt",
     "Cannot read file '$1'": "File '$1' kann nicht gelesen werden",
     "Decoration ignored": "Dekoration ignoriert",
     "Empty line in tune header - ignored": "Leerzeile in Kopfbereich - ignoriert",
@@ -493,7 +493,7 @@
     "Lack of starting ! or \" in U: / %%user": "! or \" fehlt in U: / %%user",
     "Line split problem - adjust maxshrink and/or breaklimit": "Probleme beim Aufteilen der Zeile - justiere maxshrink und/oder breaklimit",
     "Line too much shrunk $1 $2 $3": "Zeile zu stark geschrumpft $1 $2 $3",
-    "Line underfull ($1pt of $2pt)": "Zeile nicht voll genug ($1pt of $2pt)",
+    "Line underfull ($1pt of $2pt)": "Zeile nicht voll gefüllt ($1pt of $2pt)",
     "Misplaced '[' in %%staves": "'[' fehlerhaft platziert in %%staves",
     "Misplaced '{' in %%staves": "'{' fehlerhaft platziert in %%staves",
     "Misplaced '(' in %%staves": "'(' fehlerhaft platziert in %%staves",
@@ -506,7 +506,7 @@
     "No </style> in %%beginsvg sequence": "kein </style> in %%beginsvg sequenz",
     "No accidental after 'exp'": "kein Vorzeichen nach 'exp'",
     "No end of decoration": "kein Ende der Dekoration",
-    "No end of grace note sequence": "kein ende der Vorschlagnoten",
+    "No end of grace note sequence": "kein Ende der Vorschlagnoten",
     "No end of guitar chord": "kein Ende des Akkordsymbols",
     "No end of repeat string": "kein Ende des Wiederholungszeichens",
     "No end of tuplet": "kein Ende des Tuplets",
@@ -523,22 +523,22 @@
     "Not enough measures to repeat": "nicht genug Takte für Wiederholung",
     "Not enough parameters in %%map": "nicht genug Parameter in  %%map",
     "Not enough symbols after repeat sequence": "nicht genug Symbole nach einer Wiederholungssequenz",
-    "Not enough symbols to repeat": "Pas assez de symboles à répéter",
+    "Not enough symbols to repeat": "Nicht genug wiederholbare Symbole",
     "Note too long": "Note zu lang",
     "Note too short": "Note zu kurz",
-    "Too many include levels": "Verschachtelung für include zu tiefr",
+    "Too many include levels": "Verschachtelung für include zu tief",
     "Too many ties": "zu viele Haltebogen",
     "Too many words in lyric line": "zu viele Worte in Liedtextzeile",
     "Unknown bagpipe-like key": "unbekante Dudelsackartige Tonart",
-    "Unknown clef '$1'": "unbekannter Schlüssel '$1'",
+    "Unknown clef '$1'": "unbekannter Notenchlüssel '$1'",
     "Unknown decoration '$1'": "unbekannte Dekoration '$1'",
-    "Unknown font $1": "unbekannte schriftart '$1' ",
-    "Unknown glyph: '$1'": "Unbekanntes Schriftsybol '$1'",
-    "Unknown keyword '$1' in %%multicol": "unbekanntes Schlüsselwort  '$1' in %%multicol",
+    "Unknown font $1": "unbekannte Schriftart '$1' ",
+    "Unknown glyph: '$1'": "Unbekanntes Schriftsymbol '$1'",
+    "Unknown keyword '$1' in %%multicol": "unbekanntes Schlüsselwort '$1' in %%multicol",
     "Unterminated string": "nicht abgeschlossene Zeichenkette",
     "Unterminated string in Q:": "nicht abgeschlossene Zeichenkette in Q:",
     "Voice overlay already started": "Stimmüberlagerung bereits gestartet",
-    "w: without music": "w: ohne noten",
+    "w: without music": "w: ohne Noten",
     "Wrong duration in voice overlay": "fehlerhafte Notenwerte in Stimmüberlagerung"
   }
 }
