#55 allow to suppress rendering of tuplets #108 added translation for standardizes sheet annotation

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -424,6 +424,16 @@
     "Y-position": "Y-position",
     "Y_SCALE": "Vertikale Skalierung",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
+    "key": "schlüssel",
+    "show": "anzeigen",
+    "T01_number": "T01 Nummer",
+    "T01_number_extract": "T01 Auszug-Nummer",
+    "T01_number_extract_value": "T01 Auszugn Nummer Wert",
+    "T02_copyright_music": "T02 Copyright Musik",
+    "T03_copyright_harpnotes": "T03 Copyright Unterlegnoten",
+    "T04_to_order": "T04 zu beziehen bei",
+    "T99_do_not_copy": "T05 bitte nicht kopieren",
+    "value": "Wert",
     "+: lyric without music": "+: Liedtext ohne Musik",
     "+: without previous info field": "+: ohne vorhergehends Info-Feld",
     "'{' in grace note": "'{' in Verzierungsnote",
