#108 improve presets for sheet annotation thereby had to tweak the sort approach in opal-neatjson.rb Update translations tweak default location updated reference sheet

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -432,7 +432,20 @@
     "T02_copyright_music": "T02 Copyright Musik",
     "T03_copyright_harpnotes": "T03 Copyright Unterlegnoten",
     "T04_to_order": "T04 zu beziehen bei",
-    "T99_do_not_copy": "T05 bitte nicht kopieren",
+    "T99_do_not_copy": "T99 bitte nicht kopieren",
+    "3": "3",
+    "4": "4",
+    "5": "5",
+    "6": "6",
+    "afterColon1": "afterColon1",
+    "afterColonN": "afterColonN",
+    "afterComma": "afterComma",
+    "beforeColonN": "beforeColonN",
+    "could not find extract with number": "Es gibt keinen Auszug mit nummer",
+    "Please do not copy": "Bitte nicht kopieren",
+    "Private copy": "Privatkopie",
+    "provided by\n": "zu beziehen bei\n",
+    "short": "short",
     "value": "Wert",
     "+: lyric without music": "+: Liedtext ohne Musik",
     "+: without previous info field": "+: ohne vorhergehends Info-Feld",
