#111 added experimental implementation for manual increments (moronic)

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -446,6 +446,7 @@
     "Y-position": "Y-position",
     "Y_SCALE": "Vertikale Skalierung",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
+    "moreinc": "extra Voreschub",
     "value": "Wert",
     "+: lyric without music": "+: Liedtext ohne Musik",
     "+: without previous info field": "+: ohne vorhergehends Info-Feld",
