--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -287,6 +287,7 @@
     "missing text": "Text fehlt",
     "MM_PER_POINT": "MM pro point",
     "more than one line found for ": "Mehr als eine Zeile gefunden für ",
+    "moreinc": "extra Vorschub",
     "Name of annotation": "Name der Beschriftungsvorlage",
     "Name of draggable": "Name der Verschiebemarke",
     "Name of target": "Name des Sprungziels",
@@ -414,6 +415,7 @@
     "T99_do_not_copy": "T99 bitte nicht kopieren",
     "target to jump to": "Sprungziel",
     "templates": "Vorlagen",
+    "tempo change not suported by zupfnoter": "Zupfnoter unterstüzt keine Tempoänderungen",
     "Text of annotation": "Text der Notenbeschriftung",
     "text": "Text",
     "text_color": "Textfarbe",
@@ -446,7 +448,6 @@
     "Y-position": "Y-position",
     "Y_SCALE": "Vertikale Skalierung",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
-    "moreinc": "extra Voreschub",
     "value": "Wert",
     "+: lyric without music": "+: Liedtext ohne Musik",
     "+: without previous info field": "+: ohne vorhergehends Info-Feld",
