#124 now raise message for redundant P: and R:

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -288,6 +288,8 @@
     "MM_PER_POINT": "MM pro point",
     "more than one line found for ": "Mehr als eine Zeile gefunden für ",
     "moreinc": "extra Vorschub",
+    "Multiple parts for same note": "Mehrere Part-Angaben [P:] für eine Note",
+    "Multiple remarks for same note": "Mehrere Verschiebemarken [r: ]für eine Note",
     "Name of annotation": "Name der Beschriftungsvorlage",
     "Name of draggable": "Name der Verschiebemarke",
     "Name of target": "Name des Sprungziels",
