#63 updated translation for dropbox menu etc.

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -196,6 +196,7 @@
     "download abc to local system": "ABC - File herunterladen",
     "Draggable": "Verschiebemarke",
     "DRAWING_AREA_SIZE": "Größe der Zeichenfläche",
+    "Dropbox": "Dropbox",
     "DURATION_TO_STYLE": "Dauer-zu-Zeit",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
     "Edit Addon": "Zusatz bearbeiten ",
@@ -204,6 +205,7 @@
     "Edit Config": "Konfig. bearbeiten",
     "Edit configuration with forms": "Konfiguration in Bildschirmmasken bearbeiten",
     "Edit current extract": "Konfiguration des aktuellen Auszugs bearbeiten",
+    "edit extra increments": "Extra Vorschub bearbeiten",
     "edit global settings for the current song": "Globale Einstellungen für das Musikstück bearibeten",
     "Edit layout paerameters\nin current extract": "Layout-Parameter bearbeiten\nimaktuellen Auszug",
     "Edit presentation of stringanmes": "Darstellung der Saitennamen bearbeiten",
@@ -252,6 +254,7 @@
     "Id": "Identifikationsnummer",
     "in distance": "Abstand der Eingangslinie",
     "inject the default configuration (for development use only)": "inject the default configuration (for development use only)",
+    "Interact with dropbox": "Arbeiten mit Dropbox",
     "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
     "Insert addon at cursor position": "Zusatzinformation an der Cursor-Position einfügen",
     "Insert Addon": "Zusatz einfügen",
@@ -278,6 +281,8 @@
     "logged out": "ausgeloggt",
     "Login in dropbox;\nchoose folder in Dropbox": "In Dropbox einloggen;\nOrdner in Dropbox wählen",
     "Login": "Einloggen",
+    "Logout from Dropbox": "bei Dropbox ausloggen",
+    "Logout": "Ausloggen",
     "lyrics": "Liedtexte",
     "Manual": "Benutzerhandbuch",
     "marks": "Saitenmarken",
@@ -294,6 +299,7 @@
     "Name of draggable": "Name der Verschiebemarke",
     "Name of target": "Name des Sprungziels",
     "neatjson": "JSON-Formatiuerng",
+    "Nested Tuplet": "verschachtelte N-tolen",
     "New Entry": "Neuer Eintrag",
     "New": "Neu",
     "nonflowrest": "Begleitpausen",
@@ -449,6 +455,8 @@
     "xx": "xx",
     "Y-position": "Y-position",
     "Y_SCALE": "Vertikale Skalierung",
+    "you are not logged in to dropbox": "Du bist nicht bei Dropbox angemeldet",
+    "you need to logout if you want to change the application scope": "Du musst dich abmelden um den Zugriffstyp zu ändern",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "value": "Wert",
     "+: lyric without music": "+: Liedtext ohne Musik",
