#111 reworked the configuration approach for tweaking manual layout
* use time as key for the configuration
* added an approach to have configuration sets with regular expression as key
* renamed moreinc to minc (manual increment, more increment …)
* prepare for more configuration parameters in minc - entries
* asynchrones loading in I18n now uses time to force loading

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -183,7 +183,8 @@
     "missing text": "Text fehlt",
     "MM_PER_POINT": "MM pro point",
     "more than one line found for ": "Mehr als eine Zeile gefunden für ",
-    "moreinc" : "extra Vorschub",
+    "minc" : "extra Vorschub",
+    "minc_f" : "Faktor",
     "Multiple parts for same note": "Mehrere Part-Angaben [P:] für eine Note",
     "Multiple remarks for same note": "Mehrere Verschiebemarken [r: ]für eine Note",
     "Name of annotation": "Name der Beschriftungsvorlage",
