#63 updated translation for dropbox menu etc.

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -232,6 +232,7 @@
     "Extract": "Auszug",
     "extract": "Auszug",
     "filenamepart": "Filename-Zusatz",
+    "Filename not specified in song add an F: instruction": "Keine Filename angegeben. Bitte füge eine F: - Kopfzeile hinzu",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
     "Flowline": "Flußlinie",
@@ -366,7 +367,7 @@
     "restposition": "Position der Pausen",
     "rests as V 1.3": "Pausen wie in V. 1.3",
     "right": "rechts",
-    "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
+    "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
     "saved to dropbox": "in Dropbox gespeichert",
     "set screen perspective": "Bildschirmansicht wählen",
     "shape": "Linienform",
