#128 improved reporting on save
return to layout_harpnotes for “dsave”. load_music_model does not populate the print options properly

updated Changes

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -84,6 +84,7 @@
     "Distance for in-line from last note before variation": "Abstand der Eingangslinie von der letzten Note vor dem varianten Abschnitt",
     "Distance for out-line from firat note after variation": "Abstand der Ausgangslinie von der ersten Note nach dem varianten Abschnitt",
     "Dl abc": "Dl abc",
+    "does not match pattern:": "entspricht nicht dem Muster:",
     "download abc to local system": "ABC - File herunterladen",
     "Draggable": "Verschiebemarke",
     "DRAWING_AREA_SIZE": "Größe der Zeichenfläche",
@@ -261,7 +262,7 @@
     "right": "rechts",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
     "Save": "Speichern",
-    "saved to dropbox": "in Dropbox gespeichert",
+    "Files saved to dropbox": "Dateien in Dropbox gespeichert",
     "set screen perspective": "Bildschirmansicht wählen",
     "shape": "Linienform",
     "Shifter": "links/rechts Verschiebung",
