--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -193,6 +193,7 @@
     "Distance for in-line from last note before variation": "Abstand der Eingangslinie von der letzten Note vor dem varianten Abschnitt",
     "Distance for out-line from firat note after variation": "Abstand der Ausgangslinie von der ersten Note nach dem varianten Abschnitt",
     "Dl abc": "Dl abc",
+    "does not match pattern:": "entspricht nicht dem Muster:",
     "download abc to local system": "ABC - File herunterladen",
     "Draggable": "Verschiebemarke",
     "DRAWING_AREA_SIZE": "Größe der Zeichenfläche",
@@ -368,7 +369,7 @@
     "rests as V 1.3": "Pausen wie in V. 1.3",
     "right": "rechts",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
-    "saved to dropbox": "in Dropbox gespeichert",
+    "Files saved to dropbox": "Dateien in Dropbox gespeichert",
     "set screen perspective": "Bildschirmansicht wählen",
     "shape": "Linienform",
     "Shifter": "links/rechts Verschiebung",
