#116 Fine tune structure configuration forms and menus
now have extract annotation form, to configure title, etc of extracts one screen

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -149,6 +149,7 @@
     "AnnotationRef": "Ref. Notenbeschriftung",
     "annotations": "Notenbeschriftungsvorlagen",
     "autopos": "automat. positionieren",
+    "bad characters in filename": "Fehlerhafte Zeichen im Filenamen",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
@@ -201,6 +202,7 @@
     "DURATION_TO_STYLE": "Dauer-zu-Zeit",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
     "Edit Addon": "Zusatz bearbeiten ",
+    "Edit annotations of an extract": "Beschriftung der Auszüge bearbeiten",
     "edit barnumbers or countnotes": "Taktnummern und Zählmarken bearbeiten",
     "Edit basic settings of extract": "Grundeinstellungen bearbeiten",
     "Edit Config": "Konfig. bearbeiten",
@@ -232,8 +234,10 @@
     "Extract 3": "Auszug 3",
     "Extract": "Auszug",
     "extract": "Auszug",
-    "filenamepart": "Filename-Zusatz",
+    "Extract-Annotation": "Auszugsbeschriftung",
     "Filename not specified in song add an F: instruction": "Keine Filename angegeben. Bitte füge eine F: - Kopfzeile hinzu",
+    "filenamepart": "Filename-Zusatz",
+    "Files saved to dropbox": "Dateien in Dropbox gespeichert",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
     "Flowline": "Flußlinie",
@@ -256,10 +260,10 @@
     "Id": "Identifikationsnummer",
     "in distance": "Abstand der Eingangslinie",
     "inject the default configuration (for development use only)": "inject the default configuration (for development use only)",
-    "Interact with dropbox": "Arbeiten mit Dropbox",
     "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
     "Insert addon at cursor position": "Zusatzinformation an der Cursor-Position einfügen",
     "Insert Addon": "Zusatz einfügen",
+    "Interact with dropbox": "Arbeiten mit Dropbox",
     "italic": "kursiv",
     "jumplines": "Sprunglinien",
     "jumptarget": "Sprungziel",
@@ -290,12 +294,12 @@
     "marks": "Saitenmarken",
     "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
     "medium": "normal",
+    "minc": "extra Vorschub",
+    "minc_f": "Faktor",
     "missing pos": "Positionsangabe fehlt",
     "missing text": "Text fehlt",
     "MM_PER_POINT": "MM pro point",
     "more than one line found for ": "Mehr als eine Zeile gefunden für ",
-    "minc": "extra Vorschub",
-    "minc_f": "Faktor",
     "Multiple parts for same note": "Mehrere Part-Angaben [P:] für eine Note",
     "Multiple remarks for same note": "Mehrere Verschiebemarken [r: ]für eine Note",
     "Name of annotation": "Name der Beschriftungsvorlage",
@@ -369,7 +373,6 @@
     "rests as V 1.3": "Pausen wie in V. 1.3",
     "right": "rechts",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
-    "Files saved to dropbox": "Dateien in Dropbox gespeichert",
     "set screen perspective": "Bildschirmansicht wählen",
     "shape": "Linienform",
     "Shifter": "links/rechts Verschiebung",
