#63 improved error messages and handling of dropbox
detect the following cases

* if user hits BACK after login, another access token is created
* url has an access token even if no login was requested

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -235,7 +235,7 @@
     "Extract": "Auszug",
     "extract": "Auszug",
     "Extract-Annotation": "Auszugsbeschriftung",
-    "Filename not specified in song add an F: instruction": "Keine Filename angegeben. Bitte füge eine F: - Kopfzeile hinzu",
+    "Filename not specified in song add an F: instruction": "Kein Filename angegeben. Bitte füge eine F: - Kopfzeile hinzu",
     "filenamepart": "Filename-Zusatz",
     "Files saved to dropbox": "Dateien in Dropbox gespeichert",
     "fit to viewport": "in Anzeigebereich\neinpassen",
@@ -284,11 +284,13 @@
     "LINE_MEDIUM": "Linienstärke mittel",
     "LINE_THICK": "Linienstärke dick",
     "LINE_THIN": "Linienstärke dünn",
+    "logged out from dropbox": "Du hast dich aus Dropbox ausgeloggt",
     "logged out": "ausgeloggt",
     "Login in dropbox;\nchoose folder in Dropbox": "In Dropbox einloggen;\nOrdner in Dropbox wählen",
     "Login": "Einloggen",
     "Logout from Dropbox": "bei Dropbox ausloggen",
     "Logout": "Ausloggen",
+    "Lost Access token. This should not happen. Please file a bug report.": "Zugriffstoken verloren. Das sollte nicht passieren. Bitte kontaktiere Zupfnoter-Entwicklung",
     "lyrics": "Liedtexte",
     "Manual": "Benutzerhandbuch",
     "marks": "Saitenmarken",
@@ -309,6 +311,7 @@
     "Nested Tuplet": "verschachtelte N-tolen",
     "New Entry": "Neuer Eintrag",
     "New": "Neu",
+    "No access token to revoke": "Kein Zugriffstoken vorhanden, das gelöscht werden kann.",
     "nonflowrest": "Begleitpausen",
     "notebound annotation": "Notenbezogene Beschriftung",
     "notebound": "Notenbezogen",
@@ -463,6 +466,8 @@
     "Y_SCALE": "Vertikale Skalierung",
     "you are not logged in to dropbox": "Du bist nicht bei Dropbox angemeldet",
     "you need to logout if you want to change the application scope": "Du musst dich abmelden um den Zugriffstyp zu ändern",
+    "Zombie Accesstoken revoked; do not use Browser back after login to dropbox": "Zombie Zugriffstoken gelöscht. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
+    "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "value": "Wert",
     "+: lyric without music": "+: Liedtext ohne Musik",
