#38 add another German tutorial to the help menu

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -213,9 +213,12 @@
     "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
     "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
     "Open ABC file in dropbox": "ABC-File in Dropbox öffnen",
-    "Open an ABC tutorial (in German)": "Öffne ABC - Einfürung\nin Deutsch",
+    "abc Tutorial concise": "ABC Tutorial kompakt",
+    "abc Tutorial detail": "ABC Tutorial ausführlich",
+    "Open a detailed ABC tutorial (in German)": "Kompaktes Tutorial von Penzeng öffnen (Deutsch)",
+    "Open an concise ABC tutorial (in German)": "Ausführliches Tutorial von Schacherl öffnen (Deutsch)",
     "Open the user manual": "Öffne das Zupfnoter Benutzerhandbuch",
-    "Open the version information on website": "Vesionsinformaitonen anzeigen",
+    "Open the version information on website": "Vesionsinformationen anzeigen",
     "Open the video tutorials on youtube": "Schulungsvideos auf\nYouTube",
     "Open Zupfnoter website": "Öffne die Zupfnoter - Homepage",
     "Open": "Öffnen",
