--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -1578,14 +1578,14 @@ Vorgabewerte für die Position und Schriftart dieser Beschriftungen.
   \textbf{(74) T04 to order - zu beziehen bei}: Hier kann man angeben,
   über welche Adresse das Unterlegnotenblatt bezogen werden kann
   (Konfiguration siehe Kapitel
-  \ref{presets.notes.T04ux5ftoux5forder}\hyperref[presets.notes.T04ux5ftoux5forder]{presets.notes.T04\_to\_order}.
+  \ref{presets.notes.T04ux5ftoux5forder}\hyperref[presets.notes.T04ux5ftoux5forder]{presets.notes.T04\_to\_order}).
   Das ist natürlich nur sinnvoll, wenn es für die erstellen
   Unterlegnoten einen Vertriebsweg gibt.
 \item
   \textbf{(75) T02 Copryright music - Urheberrechte für das Stück}: Hier
   kann mam die Urheberrechte für das Musikstück angeben (Konfiguration
   siehe Kapitel
-  \ref{presets.notes.T02ux5fcopyrightux5fmusic}\hyperref[presets.notes.T02ux5fcopyrightux5fmusic]{presets.notes.T02\_copyright\_music}.
+  \ref{presets.notes.T02ux5fcopyrightux5fmusic}\hyperref[presets.notes.T02ux5fcopyrightux5fmusic]{presets.notes.T02\_copyright\_music}).
   Es wird empfohlen, diese Rechte immer anzugeben und den Satz
   ``Privatkopie'' hinzuzufügen, wenn mit dem Rechteinhaber keine
   Vereinbarung geschlossen wurde.
@@ -1600,18 +1600,18 @@ Vorgabewerte für die Position und Schriftart dieser Beschriftungen.
   Unabhängig von den Urheberrechten am Stück entsteht auch ein
   Urheberrecht an den erstellen Unterlegnoten. Hier kannst du diese
   Rechte beanspruchen (Konfiguration siehe Kapitel
-  \ref{presets.notes.T03ux5fcopyrightux5fharpnotes}\hyperref[presets.notes.T03ux5fcopyrightux5fharpnotes]{extract.0.synchlines}.
+  \ref{presets.notes.T03ux5fcopyrightux5fharpnotes}\hyperref[presets.notes.T03ux5fcopyrightux5fharpnotes]{extract.0.synchlines}).
 \item
   \textbf{(77) T99 do not copy - Bitte nicht kopieren}: Diese
   Beschriftung soll den Blick dafür schärfen, das die erstellen
   Unterlegnoten nicht einfach wild kopiert werden dürfen, sondern die
   Urheberrechte zu bachten sind (Konfiguration siehe Kapitel
-  \ref{presets.notes.T99ux5fdoux5fnotux5fcopy}\hyperref[presets.notes.T99ux5fdoux5fnotux5fcopy]{presets.notes.T99\_do\_not\_copy}.
+  \ref{presets.notes.T99ux5fdoux5fnotux5fcopy}\hyperref[presets.notes.T99ux5fdoux5fnotux5fcopy]{presets.notes.T99\_do\_not\_copy}).
 \item
   \textbf{(78) T01 Number - Nummer}: Hier kannst du eine Nummer angeben,
   welche das Unterlegnotenblatt eindeutig und schnell identifizierbar
   macht(Konfiguration siehe Kapitel
-  \ref{presets.notes.T01ux5fnumber}\hyperref[presets.notes.T01ux5fnumber]{presets.notes.T01\_number}.
+  \ref{presets.notes.T01ux5fnumber}\hyperref[presets.notes.T01ux5fnumber]{presets.notes.T01\_number}).
   Im Grunde ist das wie eine Bestellnummer. Es wird empfohlen, die
   Nummer nach folgendem Schema zu gestalten:
 
@@ -1797,7 +1797,7 @@ aktuellen Arbeitsschrit besser zu unterstützen:
   die anderen Fenster größer werden (Siehe Kapitel
   \ref{menues-im-hauptfenster}
   \hyperref[menues-im-hauptfenster]{Werkzeugleiste für Schaltflächen und
-  Menüs}
+  Menüs})
 \end{itemize}
 
 Innerhalb dieser Fenster gibt es weitere \textbf{Bedienelemente}:
@@ -2281,11 +2281,11 @@ Eingabemöglichkeiten nutze:
   \texttt{ABC}- Der \index{Texteditor}Texteditor für die ABC-Notation
   sowie die Konfiguration der Unterlegnoten (im JSON-Format) angezeigt
   und bearbeitet (siehe Kapitel \ref{texteditor}
-  \hyperref[texteditor]{Texteditor}. Für die ABC-Notation gibt es eine
+  \hyperref[texteditor]{Texteditor}). Für die ABC-Notation gibt es eine
   separate Anleitung im Menü \texttt{Hilfe}
 \item
   \texttt{Liedtextexte} für die Erfassung der Liedtexte (siehe Kapitel
-  \ref{liedtexteditor} \hyperref[liedtexteditor]{Liedtexteditor}
+  \ref{liedtexteditor} \hyperref[liedtexteditor]{Liedtexteditor})
 \item
   \texttt{Konfiguration} für die formulargeführte Bearbeitung der
   Zupfnoter-Konfiguration. Die hier gemachten Eingaben werden sofort in
@@ -2483,7 +2483,7 @@ Unterlegnotenvorschau zu sehen.
 \begin{quote}
 \textbf{Hinweis}: Die Anordnung der Liedtexte wird über die
 Konfiguration bestimmt (siehe Kapitel~\ref{templates.lyrics}
-\hyperref[templates.lyrics]{extract.0.lyrics}
+\hyperref[templates.lyrics]{extract.0.lyrics}).
 \end{quote}
 
 \hyperdef{}{konfigurationsmasken}{\subsubsection{Konfigurationsmasken}\label{konfigurationsmasken}}
