more information about Console in user manual

--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -2248,6 +2248,63 @@ Konsolenbefehle aus. Daher werden selbst Experten diese Befehle in der
 Regel nicht brauchen.
 \end{quote}
 
+Andererseits gibt es gerade in der Konsole manche experimentelle
+Zusatzfunktion, die noch nicht an die grafische Oberfläche angeschlossen
+ist.
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  \texttt{setstdnotes}: kopiert dem aktuellen Stück die Konfiguration
+  der Blattbeschriftungen usw um sie auf ein anderes Stück zu
+  übertragen.
+\item
+  \texttt{setstdextract}: kopiert dem aktuellen Stück die Konfiguration
+  der Auszüge, um sie auf ein anderes Stück zu übertragen.
+\item
+  \texttt{stdnotes}: überträgt die zuletzt kopierte Konfiguration der
+  Blattbeschriftungen auf das aktuelle Stück
+\item
+  \texttt{stdectract}: überträgt die zuletzt kopierte Konfiguration der
+  Auszüge auf das aktuelle Stück
+\end{itemize}
+
+\begin{quote}
+\textbf{Hinweis}: Diese Befehle sind hilfreich um schnell die
+Konfiguration eines aus MusicXml importierten Stückes einzustellen.
+\end{quote}
+
+Weiterhin zeigt die Konsole einige Meldungen, die für die Fehleranalyse
+hilfreich sind. Insbesondere, wenn der ``debug'' - Modus eingestellt
+ist.
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  \texttt{loglevel\ debug} - schaltet ausführlichere Fehlermeldungen
+  ein. Zupfnoter wird dadurch zwar deutlich langsammer, aber für den
+  Zupfnoter-Entweickler sind die Ausgaben hilfreich um die Ursache von
+  Problemen einzukreisen
+\item
+  \texttt{loglevel\ error} - Es werden nur noch schwerwiegende Fehler
+  gemeldet. Das ist für die normale Anwendung ausreichend.
+\end{itemize}
+
+Eine Übersicht der Befehle für die Konsole gibt der Befehl
+
+\begin{itemize}
+\item
+  \texttt{help\ \textless{}thema\textgreater{}} - z.B.
+  \texttt{help\ std} gibt aus
+
+\begin{verbatim}
+stdnotes  : configure extract with template from localstore
+stdextract  : configure with template from localstore
+setstdnotes  : configure stdnotes in localstore
+setstdextract  : configure stdc onfig in localstore
+\end{verbatim}
+\end{itemize}
+
 \hyperdef{}{shortcuts}{\subsection{Tastenkombinationen
 (Shortcuts)}\label{shortcuts}}
 
@@ -2418,7 +2475,7 @@ Nach der ABC-Notation kommen die Zupfnoter-Einstellungen. Diese werden
 durch den Kommentar
 
 \begin{verbatim}
-`%%%%zupfnoter.config`
+%%%%zupfnoter.config
 \end{verbatim}
 
 von der ABC-Notation abgetrennt. Die ABC-Notation und die
